@@ -13,8 +13,8 @@ import java.io.File;
 import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import java.util.concurrent.locks.ReadWriteLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 public final class StatisticManager {
 
@@ -35,12 +35,17 @@ public final class StatisticManager {
     /**
      * Lookup for the score of all players.
      */
-    private final Map<UUID, Integer> statistics = new ConcurrentHashMap<>();
+    private final Map<UUID, Integer> statistics = new HashMap<>();
 
     /**
      * Sorted list, where the index is the rank.
      */
     private final List<Tuple<UUID, Integer>> ranking = new ArrayList<>();
+
+    /**
+     * Lock to ensure concurrent operation.
+     */
+    private final ReadWriteLock lock = new ReentrantReadWriteLock();
 
     /**
      * Whether the statistics have changed.
@@ -61,20 +66,27 @@ public final class StatisticManager {
      * @return New amount of points.
      */
     public int addPoints(@NotNull Player player, int points) {
-        // Update total points
-        final int total = statistics.merge(player.getUniqueId(), points, Integer::sum);
-        changed = true;
+        lock.writeLock().lock();
 
-        // Remove old ranking entry
-        final int oldIndex = Collections.binarySearch(ranking, new Tuple<>(player.getUniqueId(), total - points), COMPARATOR);
-        ranking.remove(oldIndex);
+        try {
+            // Update total points
+            final int total = statistics.merge(player.getUniqueId(), points, Integer::sum);
+            changed = true;
 
-        // Add new ranking entry
-        final Tuple<UUID, Integer> element = new Tuple<>(player.getUniqueId(), total);
-        final int newIndex = Collections.binarySearch(ranking, element, COMPARATOR);
-        ranking.add(~newIndex, element);
+            // Remove old ranking entry (if exists)
+            final int oldIndex = Collections.binarySearch(ranking, new Tuple<>(player.getUniqueId(), total - points), COMPARATOR);
+            if (oldIndex >= 0)
+                ranking.remove(oldIndex);
 
-        return total;
+            // Add new ranking entry
+            final Tuple<UUID, Integer> element = new Tuple<>(player.getUniqueId(), total);
+            final int newIndex = Collections.binarySearch(ranking, element, COMPARATOR);
+            ranking.add(~newIndex, element);
+
+            return total;
+        } finally {
+            lock.writeLock().unlock();
+        }
     }
 
     /**
@@ -84,15 +96,21 @@ public final class StatisticManager {
      * @return Statistic of the player.
      */
     public @NotNull Tuple<Integer, Integer> getStatistic(@NotNull Player player) {
-        int points = statistics.getOrDefault(player.getUniqueId(), 0);
+        lock.readLock().lock();
 
-        // If no points are scored -> no ranking
-        if (points == 0)
-            return new Tuple<>(-1, 0);
+        try {
+            int points = statistics.getOrDefault(player.getUniqueId(), 0);
 
-        // Get ranking of player by the index in ranking
-        final int rank = Collections.binarySearch(ranking, new Tuple<>(player.getUniqueId(), points), COMPARATOR) + 1;
-        return new Tuple<>(rank, points);
+            // If no points are scored -> no ranking
+            if (points == 0)
+                return new Tuple<>(-1, 0);
+
+            // Get ranking of player by the index in ranking
+            final int rank = Collections.binarySearch(ranking, new Tuple<>(player.getUniqueId(), points), COMPARATOR) + 1;
+            return new Tuple<>(rank, points);
+        } finally {
+            lock.readLock().unlock();
+        }
     }
 
     /**
@@ -102,36 +120,52 @@ public final class StatisticManager {
      * @return List of top players.
      */
     public @NotNull List<Tuple<String, Integer>> getLeaderboard(int count) {
-        return ranking.stream()
-                .limit(count)
-                .map(e -> getName(e.getA()).thenApply(n -> new Tuple<>(n.orElse("ERROR"), e.getB())))
+        lock.readLock().lock();
+
+        final List<CompletableFuture<Tuple<String, Integer>>> futures;
+        try {
+            futures = ranking.stream()
+                    .limit(count)
+                    .map(e -> getName(e.getA()).thenApply(n -> new Tuple<>(n.orElse("ERROR"), e.getB())))
+                    .toList();
+        } finally {
+            lock.readLock().unlock();
+        }
+
+        return futures.stream()
                 .map(CompletableFuture::join)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Load statistic from file.
      */
     public void loadStatistics() {
+        lock.writeLock().lock();
+
         // Save default config
         final File file = new File(plugin.getDataFolder(), "statistics.yml");
         var config = YamlConfiguration.loadConfiguration(file);
 
-        // Clear old statistic
-        statistics.clear();
-        ranking.clear();
+        try {
+            // Clear old statistic
+            statistics.clear();
+            ranking.clear();
 
-        // Load new values
-        for (final String key : config.getKeys(false)) {
-            final UUID uuid = UUID.fromString(key);
-            final int points = config.getInt(key);
+            // Load new values
+            for (final String key : config.getKeys(false)) {
+                final UUID uuid = UUID.fromString(key);
+                final int points = config.getInt(key);
 
-            statistics.put(uuid, points);
-            ranking.add(new Tuple<>(uuid, points));
+                statistics.put(uuid, points);
+                ranking.add(new Tuple<>(uuid, points));
+            }
+
+            // Recalculate ranking
+            ranking.sort(COMPARATOR);
+        } finally {
+            lock.writeLock().unlock();
         }
-
-        // Recalculate ranking
-        ranking.sort(COMPARATOR);
     }
 
     /**
@@ -142,10 +176,15 @@ public final class StatisticManager {
         if (!changed)
             return;
 
+        lock.readLock().lock();
         final YamlConfiguration config = new YamlConfiguration();
 
-        for (final Map.Entry<UUID, Integer> entry : statistics.entrySet()) {
-            config.set(entry.getKey().toString(), entry.getValue());
+        try {
+            for (final Map.Entry<UUID, Integer> entry : statistics.entrySet()) {
+                config.set(entry.getKey().toString(), entry.getValue());
+            }
+        } finally {
+            lock.readLock().unlock();
         }
 
         // Save configs
